Responsive fix, prevented desktop from collapsing.

--- a/css/non-responsive.css
+++ b/css/non-responsive.css
@@ -8,7 +8,7 @@
 body {
   /*padding-top: 70px;*/
   /*padding-bottom: 30px;*/
-  min-width: 960px;
+  min-width: 980px;
 }
 
 /* Finesse the page header spacing */
@@ -34,12 +34,12 @@ body {
 
 /* Demonstrate the grids */
 .col-xs-4 {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #eee;
-  border: 1px solid #ddd;
-  background-color: rgba(86,61,124,.15);
-  border: 1px solid rgba(86,61,124,.2);
+  /*padding-top: 15px;*/
+  /*padding-bottom: 15px;*/
+  /*background-color: #eee;*/
+  /*border: 1px solid #ddd;*/
+  /*background-color: rgba(86,61,124,.15);*/
+  /*border: 1px solid rgba(86,61,124,.2);*/
 }
 
 .container .navbar-header,
